--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  cloud_firestore: ^0.13.4+1
+  firebase_auth: ^0.15.5+2
+  firebase_database: ^3.1.3
+  google_sign_in: ^4.1.4
+  firebase_storage: ^3.1.3
+  fluttertoast: ^3.1.3
+  shared_preferences: ^0.5.3+4
+  image_picker: 0.6.3+4
+  cached_network_image: 2.0.0
+  intl: 0.16.1
 
 dev_dependencies:
   flutter_test:
