--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   image_picker: 0.6.3+4
   cached_network_image: 2.0.0
   intl: 0.16.1
+  datetime_picker_formfield: 1.0.0
+  numberpicker: 1.2.0
+  enum_to_string: 1.0.9
 
 dev_dependencies:
   flutter_test:
