--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   intl: 0.16.1
   datetime_picker_formfield: 1.0.0
   numberpicker: 1.2.0
-  enum_to_string: 1.0.9
+  json_annotation: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.0.0
+  json_serializable: ^3.2.0
 
 
 # For information on the generic Dart part of this file, see the
