--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   datetime_picker_formfield: 1.0.0
   numberpicker: 1.2.0
   json_annotation: ^3.0.0
+  flutter_svg: 0.17.3+1
 
 dev_dependencies:
   flutter_test:
