--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   numberpicker: 1.2.0
   json_annotation: ^3.0.0
   flutter_svg: 0.17.3+1
+  add_2_calendar: ^1.4.0
 
 dev_dependencies:
   flutter_test:
