--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   json_annotation: ^3.0.0
   flutter_svg: 0.17.3+1
   add_2_calendar: ^1.4.0
+  flutter_local_notifications: ^1.3.0
+
 
 dev_dependencies:
   flutter_test:
