--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,6 +42,8 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSCalendarsUsageDescription</key>
-    <string>AddEventToCalendar</string>
+    <string>Enable it-is-not-my-turn app to add event to your calendar</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Enable it-is-not-my-turn app to access your camera to capture your photo</string>
 </dict>
 </plist>
