--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  camera:
+  path_provider:
+  path:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -39,6 +43,7 @@ dependencies:
   flutter_svg: 0.17.3+1
   add_2_calendar: ^1.4.0
   flutter_local_notifications: ^1.3.0
+  auto_size_text: ^2.1.0
 
 
 dev_dependencies:
